--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -1,5 +1,5 @@
-<<link rel="stylesheet" type="text/css" th:href="@{/bootstrap.min.css}">
-<div class="container my-3">
+<html layout:decorate="~{layout}" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<div layout:fragment="content" class="container my-3">
   <table class="table">
     <thead class="table-dark">
     <tr>
@@ -13,9 +13,9 @@
       <td th:text="${loop.count}"></td>
       <td>
         <a th:href="@{|/question/detail/${question.id}|}" th:text="${question.subject}"></a>
-      </td>
-      <td th:text="${#temporals.format(question.createDate, 'yyyy-MM-dd HH:mm')}"></td>
-    </tr>
+
     </tbody>
   </table>
+  <a th:href="@{/question/create}" class="btn btn-primary">질문 등록하기</a>
 </div>
+</html>
